Squishes add item bugs. Copyable flat id text

--- a/src/pages/flat-id/flat-id.scss
+++ b/src/pages/flat-id/flat-id.scss
@@ -1,3 +1,8 @@
 flat-id {
-	
+	#id-text {
+		-webkit-user-select: text;
+		-moz-user-select: text;
+		-ms-user-select: text;
+		user-select: text;
+	}
 }
